# coursProject

./: CMakeLists.txt  README.md  main.cpp
Headers/: Menu.h  ReadTag.h  Settings.h  SettingsWindow.h  WindowEdit.h  global.h  main.h  resource.h
Resources/: Menu.rc
Resourses/: Menu.rc
Sources/: ReadTag.cpp  SettingsWindow.cpp  WindowEdit.cpp  main.cpp
Sourses/: ReadTag.cpp  Settings.cpp  WindowEdit.cpp  main.cpp
